fixed overflow being hidden

--- a/timer/style.css
+++ b/timer/style.css
@@ -19,7 +19,7 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .container {
